# cvxpy-finance

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: black_litterman.ipynb  black_litterman.py  portfolio_optimization_dpp.ipynb  portfolio_optimization_dpp.py  risk_parity_spinu.ipynb  risk_parity_spinu.py
